// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`convertMessage 基本的なテキストメッセージを変換 1`] = `
{
  "markdown": 
"**@U123456** - 2024-01-11 13:40:00

Hello **world**!"
,
  "success": true,
}
`;

exports[`convertMessage blocksを含むメッセージを変換 1`] = `
{
  "markdown": 
"**@U123456** - 2024-01-11 13:40:00

# Important Notice

<section>

This is a **section** with formatting.

</section>"
,
  "success": true,
}
`;

exports[`convertMessage attachmentsを含むメッセージを変換 1`] = `
{
  "markdown": 
"**@U123456** - 2024-01-11 13:40:00

Check this out:

<attachment>
**Sample Attachment**

Attachment content
</attachment>"
,
  "success": true,
}
`;

exports[`convertMessage filesを含むメッセージを変換 1`] = `
{
  "markdown": 
"**@U123456** - 2024-01-11 13:40:00

<file id="F123456" mimetype="application/pdf" href="https://files.slack.com/files-pri/T123456-F123456/document.pdf" size="1048576">document.pdf</file>"
,
  "success": true,
}
`;

exports[`convertMessage reactionsを含むメッセージを変換 1`] = `
{
  "markdown": 
"**@U123456** - 2024-01-11 13:40:00

Great job!

<reaction count="2" users="U234567 U345678">thumbsup</reaction>
<reaction count="1" users="U456789">heart</reaction>"
,
  "success": true,
}
`;

exports[`convertMessage 複数要素を含む複雑なメッセージを変換 1`] = `
{
  "markdown": 
"**@U123456** - 2024-01-11 13:40:00

<section>

Block content

</section>

<attachment>
**Attachment**

Attachment text
</attachment>

<file id="F123456" mimetype="image/png" href="https://files.slack.com/files-pri/T123456-F123456/image.png" size="2048">image.png</file>

<reaction count="1" users="U234567">thumbsup</reaction>"
,
  "success": true,
}
`;

exports[`convertMessage コンテンツがない場合のエラーハンドリング 1`] = `
{
  "error": {
    "code": "MISSING_CONTENT",
    "details": {
      "ts": "1704980400",
      "type": "message",
    },
    "message": "No content to convert",
  },
  "success": false,
}
`;

exports[`convertMultipleMessages 複数メッセージを順番に変換 1`] = `
[
  {
    "markdown": 
"**@U123456** - 2024-01-11 13:40:00

First message"
,
    "success": true,
  },
  {
    "markdown": 
"**@U234567** - 2024-01-11 14:40:00

Second message"
,
    "success": true,
  },
]
`;

exports[`convertMultipleMessages エラーメッセージも含めて処理 1`] = `
[
  {
    "markdown": 
"**@U123456** - 2024-01-11 13:40:00

Valid message"
,
    "success": true,
  },
  {
    "error": {
      "code": "MISSING_CONTENT",
      "details": {
        "ts": "1704984000",
        "type": "message",
      },
      "message": "No content to convert",
    },
    "success": false,
  },
]
`;

exports[`convertMultipleMessages 空の配列を処理 1`] = `[]`;
